docs: rewrite README into comprehensive system documentation
- Add Overview, Features, Requirements, and Installation sections
- Include Configuration, User Guide, Troubleshooting, and Conclusion
- Align documentation with current Java Swing desktop application architecture
- Document core mechanics including seat states, premium pricing, and volatile memory